Fixed back button not being sticky.
It was missing the float style that made it overlap the inner content area that actually contained that heard bar it looked related to.

Also positioned it a bit better.

--- a/styles/zmain.css
+++ b/styles/zmain.css
@@ -443,9 +443,12 @@ a.icon-close2 {
 }
 
 .back-button {
+  height: initial;
+
+  float: left;
 	position: sticky;
-	top: 8px;
-	left: 8px;
+	top: 3px;
+	left: 5px;
 	z-index: 100;
 	font-size: 21px;
 }
